<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/profile_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:paddingTop="50dp"
                android:paddingBottom="50dp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/johngorithm"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp" />
            </LinearLayout> <!---image -->

            <TextView
                android:id="@+id/my_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border_b"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/my_name"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" /> <!-- my_name -->

            <LinearLayout
                android:id="@+id/profile_detail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border_b"
                android:baselineAligned="false"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/track_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/track_field"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/track_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:paddingStart="0dp"
                        android:paddingEnd="15dp"
                        android:text="@string/track_value"
                        android:textAlignment="viewEnd"
                        android:textSize="16sp" />


                </LinearLayout> <!-- track -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/country_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/country_field"
                        android:textColor="#000"
                        android:textSize="17sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/country_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:paddingStart="0dp"
                        android:paddingEnd="15dp"
                        android:text="@string/country_value"
                        android:textAlignment="viewEnd"
                        android:textSize="16sp" />


                </LinearLayout> <!-- country -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/email_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:paddingStart="15dp"
                        android:paddingEnd="0dp"
                        android:text="@string/email_field"
                        android:textColor="#000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/email_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingStart="0dp"
                        android:paddingEnd="15dp"
                        android:text="@string/email_value"
                        android:textSize="16sp" />
                </LinearLayout> <!-- email -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/phone_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/phone_number_field"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/phone_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="0dp"
                        android:paddingEnd="15dp"
                        android:text="@string/phone_number_value"
                        android:textAlignment="viewEnd"
                        android:textSize="16sp" />
                </LinearLayout> <!-- phone -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/slack_username_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/slack_username_field"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/slack_username_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="0dp"
                        android:paddingEnd="15dp"
                        android:text="@string/johngorithm"
                        android:textAlignment="viewEnd"
                        android:textSize="16sp" />
                </LinearLayout> <!-- slack handle -->

            </LinearLayout> <!-- profile details -->


        </LinearLayout><!-- content -->

    </ScrollView>

    <View
        android:id="@+id/footer_top_border"
        android:layout_width="match_parent"
        android:background="@drawable/custom_border_b"
        android:layout_height="2dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/profile_footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/profile_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/alc_4_0_footer"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>